make all images 100px tall

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <body>
       <p>This meetup is the best.</p>
-      <img src="meetup-icon.png" alt="icon">
-      <img src="git.png">
+      <img height="100" src="meetup-icon.png" alt="icon">
+      <img height="100" src="git.png">
   </body>
 
 </html>
